--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,5 +7,17 @@
 }
 
 body {
-    background-color: red;
+    background-color: white;
+}
+
+header {
+    
+}
+
+main {
+    
+}
+
+#logo-header {
+
 }
