--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,9 +46,10 @@ main {
     width: 100%;
 }
 
+/* GAME AREA */
+
 #game-screen {
     display: none;
-    display: flex;
     flex-direction: column;
     align-items: center;
     width: 100%;
@@ -173,5 +174,40 @@ main {
 
 .pokeball-icon {
     width: 15px;
+    height: auto;
+}
+
+/* SCORE AREA */
+
+#score-screen {
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: red;
+    color: #ffcc03;
+    text-align: center;
+}
+
+#score-screen h1 {
+    font-size: 3rem;
+    margin: 60px 0 20px;
+}
+
+#final-score {
+    font-size: 3rem;
+    font-weight: bold;
+}
+
+#restart-button {
+    margin-top: 20px;
+    padding: 10px 20px;
+    cursor: pointer;
+    background-color: transparent;
+    border: none;
+}
+
+#restart-button img {
+    width: 60%;
     height: auto;
 }
