--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,6 +12,10 @@
 body, html {
     overflow-x: hidden;
     overflow-y: hidden;
+    touch-action: none;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    user-select: none;
 }
 
 body {
@@ -118,6 +122,7 @@ main {
     align-items: center;
     margin: 40px auto;
     padding: 0;
+
 }
 
 #type-area {
